--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="txt_washi">Washi</string>
+    <string name="txt_label_email">Digite seu e-mail</string>
+    <string name="txt_email_tint">ex: @gmail.com</string>
 </resources>
