--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="txt_email_tint">ex: @gmail.com</string>
     <string name="txt_label_password">Senha</string>
     <string name="txt_label_login">Entrar</string>
+    <string name="txt_label_typed_password">Digite sua senha</string>
 </resources>
