--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,12 +6,17 @@
     <string name="txt_label_new">Sou novo por aqui</string>
     <string name="txt_getting_started">Começar</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="txt_washi">Washi</string>
     <string name="txt_label_email">Digite seu e-mail</string>
     <string name="txt_email_tint">ex: @gmail.com</string>
     <string name="txt_label_password">Senha</string>
     <string name="txt_label_login">Entrar</string>
     <string name="txt_label_typed_password">Digite sua senha</string>
+    <string name="label_wash">Lavar</string>
+    <string name="label_dry">Passar</string>
+    <string name="label_delivery">Entregar</string>
+    <string name="label_activities">Atividades</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
