--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="label_hello">Olá,</string>
+    <string name="intro_message">Escolha um serviço, a qual você tem interesse hoje.</string>
 </resources>
